--- a/TimerTest.csproj
+++ b/TimerTest.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MTimer" Version="1.0.0.3" />
+  </ItemGroup>
+
 </Project>
